    partman/active_partition.

  [ Mario Limonciello ]
  * Reset random mysql password on every ubiquity mythbuntu invocation.
  * Don't set anything in the mythbuntu_summary step.
  * Transition apply-type code into python to be called directly from
    mythbuntu_install.py instead.
    - Along with this, handling for leaving files when not reformatting
      /home should be fixed. (LP: #305236)

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Jan 2009 20:06:17 +0000

ubiquity (1.11.2) jaunty; urgency=low

  * Adjust for changes in tzsetup 1:0.24ubuntu1.
  * Correct Bazaar link in debian/copyright (pointed out by shirish).
  * Make sure that only one of grub and lilo is installed (LP: #314004).
  * Add ext4 support (LP: #293465).
  * Automatic update of included source packages: apt-setup 1:0.37ubuntu7,
    hw-detect 1.71ubuntu3, partconf 1.30build1, partman-auto 83ubuntu2,
    partman-base 128ubuntu4, partman-ext3 55ubuntu2, partman-partitioning
    64ubuntu2, partman-target 58ubuntu2, tzsetup 1:0.24ubuntu1, user-setup
    1.23ubuntu6.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Jan 2009 18:40:19 +0000

ubiquity (1.11.1) jaunty; urgency=low

  * Hand partman the data it expects when in manual partitioning.
  * Automatic update of included source packages: base-installer
    1.86ubuntu9, console-setup 1.28ubuntu4, partman-base 128ubuntu3,
    user-setup 1.23ubuntu2.
  * Automatic update of included source packages: user-setup
    1.23ubuntu3.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 17 Dec 2008 13:44:13 -0500

ubiquity (1.11.0) jaunty; urgency=low

  [ Evan Dandrea ]
  * Check to make sure a gdk window is mapped before calling
    cairo_create (LP: #208800).
  * Reset next_go_backup after encountering a question marked as seen
    (LP: #290760).
  * Save an apt.cache.Cache() so we retain the package information on
    restricted packages even after removing restricted from the
    sources.list (LP: #290925).