@@ -5,71 +5,4 @@
 # Copyright (C) 2007 Mario Limonciello
 # Copyright (C) 2007 Jared Greenwald
 
-. /usr/share/debconf/confmodule
-
-if [ "$1" ]; then
-    ROOT="$1"
-    chroot=chroot
-    log='log-output -t mythbuntu'
-else
-    ROOT=
-    chroot=
-    log=
-fi
-
-setup_mythweb()
-{
-    MYTHWEBCONF=$ROOT/usr/share/mythtv/mythweb/mythweb.conf.apache
-    NEW=$ROOT/etc/apache2/sites-available/mythweb.conf
-    cat $MYTHWEBCONF | sed -e "
-s/\(^[ \t]*setenv[ \t]\+db_server[ \t]\+\"\)[^\"]*\"/\1$HOSTNAME\"/g;
-s/\(^[ \t]*setenv[ \t]\+db_name[ \t]\+\"\)[^\"]*\"/\1$DB\"/g;
-s/\(^[ \t]*setenv[ \t]\+db_login[ \t]\+\"\)[^\"]*\"/\1$USER\"/g;
-s/\(^[ \t]*setenv[ \t]\+db_password[ \t]\+\"\)[^\"]*\"/\1$PASSWORD\"/g;
-    " > $NEW
-}
-
-secure_mythweb()
-{
-    DIGEST=$ROOT/etc/mythtv/mythweb-digest
-    NEW=${DIGEST}.new
-    cat $DIGEST | sed -e "
-s/\#    AuthType/AuthType/;
-s/^\#    AuthName/AuthName/;
-s/^\#    AuthUserFile/AuthUserFile/;
-s/^\#    Require/Require/;
-s/^\#    BrowserMatch/BrowserMatch/;
-s/^\#    Order/Order/;
-s/^\#    Satisfy/Satisfy/;
-s/\/var\/www\/htdigest/\/etc\/mythtv\/mythweb-digest/;
-    " > $NEW
-    mv $NEW $DIGEST
-
-    $log $chroot $ROOT a2enmod auth_digest
-
-    # create htdigest file create password hash thanks to
-    # http://trac.lighttpd.net/trac/wiki/Docs:ModAuth :)
-    HASH=`echo -n ${MYTHWEB_USER}:MythTV:${MYTHWEB_PASS} | md5sum | cut -b -32` || true
-    echo ${MYTHWEB_USER}:MythTV:${HASH} > $ROOT/etc/mythtv/mythweb-digest
-    chown mythtv:www-data $ROOT/etc/mythtv/mythweb-digest
-    chmod 640 $ROOT/etc/mythtv/mythweb-digest
-}
-
-#Mythweb is actually enabled
-db_get mythbuntu/mythweb
-MYTHWEB="$RET"
-if [ "$MYTHWEB" = true ]; then
-    setup_mythweb
-    #Check if we need security turned on
-    db_get mythweb/enable
-    AUTHENABLE="$RET"
-    if [ "$AUTHENABLE" = true ]; then
-        db_get mythweb/username
-        MYTHWEB_USER="$RET"
-        db_get mythweb/password
-        MYTHWEB_PASS="$RET"
-        secure_mythweb
-    fi
-fi
-
 exit 0
