@@ -14,6 +14,8 @@ ubiquity (1.11.3) UNRELEASED; urgency=low
     mythbuntu_install.py instead.
     - Along with this, handling for leaving files when not reformatting
       /home should be fixed. (LP: #305236)
+    - Mythweb acl to SQL should be fixed now, but not necessarily
+      authentication.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Jan 2009 20:06:17 +0000
 
